--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "tailwindcss": "^3.3.2",
     "webpack": "^5.88.0"
+  },
+  "devDependencies": {
+    "css-loader": "^6.8.1",
+    "style-loader": "^3.3.3"
   }
 }
