--- a/package.json
+++ b/package.json
@@ -6,9 +6,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "file-loader": "^6.2.0",
     "next": "latest",
+    "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-pdf": "^7.1.2",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.88.0"
   },
