--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-pdf": "^7.1.2",
+    "react-router-dom": "^6.14.1",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.88.0"
   },
