--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "file-loader": "^6.2.0",
     "next": "latest",
     "next-images": "^1.8.5",
