--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.4.0",
     "file-loader": "^6.2.0",
     "next": "latest",
+    "next-cloudinary": "^4.14.1",
     "next-images": "^1.8.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
