--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "cloudinary": "^1.37.3",
     "file-loader": "^6.2.0",
     "next": "latest",
     "next-cloudinary": "^4.14.1",
