cloudinary/added install data

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@cloudinary/react": "^1.13.0",
     "axios": "^1.4.0",
     "cloudinary": "^1.37.3",
     "file-loader": "^6.2.0",
