--- a/package.json
+++ b/package.json
@@ -6,17 +6,16 @@
     "start": "next start"
   },
   "dependencies": {
-    "@cloudinary/react": "^1.13.0",
     "axios": "^1.4.0",
-    "cloudinary": "^1.37.3",
+    "cloudinary": "^1.27.0",
+    "dotenv": "^16.4.5",
     "file-loader": "^6.2.0",
-    "next": "latest",
-    "next-cloudinary": "^4.14.1",
+    "next": "^13.4.7",
+    "next-cloudinary": "^4.28.0",
     "next-images": "^1.8.5",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-pdf": "^7.1.2",
-    "react-router-dom": "^6.14.1",
     "tailwindcss": "^3.3.2",
     "webpack": "^5.88.0"
   },
