--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "devDependencies": {
     "css-loader": "^6.8.1",
     "style-loader": "^3.3.3"
+  },
+  "engines": {
+    "node": "22.x"
   }
 }
