--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.3.2",
     "axios": "^1.4.0",
     "cloudinary": "^1.27.0",
     "dotenv": "^16.4.5",
